# gn-build-workspace

./: .gclient  .gitignore  .gn  BUILD.gn  DEPS  README.md  common.gni  run_demo.sh
build_script/: env_config.sh  run_demo.sh  tool.sh
example/: BUILD.gn  tutorial.cc
workspace/webrtc/: BUILD.gn  webrtc.gni
workspace/webrtc/api/: BUILD.gn  BUILD1.gn
workspace/webrtc/api/audio/: BUILD.gn  audio_frame.h
workspace/webrtc/api/audio/test/: BUILD.gn
workspace/webrtc/api/neteq/: BUILD.gn
workspace/webrtc/api/numerics/: BUILD.gn
workspace/webrtc/api/task_queue/: BUILD.gn
workspace/webrtc/api/transport/: BUILD.gn
workspace/webrtc/api/units/: BUILD.gn
workspace/webrtc/api/video/: BUILD.gn
workspace/webrtc/api/voip/: BUILD.gn
workspace/webrtc/audio/utility/: BUILD.gn  common_tool.cc  common_tool.h
workspace/webrtc/common_audio/: BUILD.gn  wav_header.h
workspace/webrtc/modules/: BUILD.gn
workspace/webrtc/modules/audio_coding/: BUILD.gn
workspace/webrtc/modules/audio_device/: BUILD.gn
workspace/webrtc/modules/audio_device/include/: audio_device.h
workspace/webrtc/modules/audio_mixer/: BUILD.gn
workspace/webrtc/modules/audio_processing/: BUILD.gn
workspace/webrtc/modules/audio_processing/aec3/: BUILD.gn
workspace/webrtc/modules/audio_processing/aec_dump/: BUILD.gn
workspace/webrtc/modules/audio_processing/agc/: BUILD.gn
workspace/webrtc/modules/audio_processing/agc2/: BUILD.gn
workspace/webrtc/modules/audio_processing/agc2/rnn_vad/: BUILD.gn
workspace/webrtc/modules/audio_processing/capture_levels_adjuster/: BUILD.gn
workspace/webrtc/modules/audio_processing/ns/: BUILD.gn
workspace/webrtc/modules/audio_processing/test/conversational_speech/: BUILD.gn
workspace/webrtc/modules/audio_processing/transient/: BUILD.gn
workspace/webrtc/modules/audio_processing/utility/: BUILD.gn
workspace/webrtc/modules/audio_processing/vad/: BUILD.gn
workspace/webrtc/modules/utility/: BUILD.gn
workspace/webrtc/rtc_base/: BUILD.gn  logging.h  platform_thread.cc  platform_thread.h
workspace/webrtc/rtc_base/experiments/: BUILD.gn
workspace/webrtc/rtc_base/memory/: BUILD.gn
workspace/webrtc/rtc_base/synchronization/: BUILD.gn
workspace/webrtc/rtc_base/system/: BUILD.gn
workspace/webrtc/rtc_base/task_utils/: BUILD.gn
workspace/webrtc/rtc_base/units/: BUILD.gn
workspace/webrtc/system_wrappers/: BUILD.gn
workspace/webrtc/test/: BUILD.gn
