group("tools") {
  deps = [
    "//example:tutorial",
    "//workspace/audio-engine:audio-engine",
    #"//workspace/webrtc/modules/audio_device",
  ]
}
#config("common_config") {
#  include_dirs = [
#    "../workspace/webrtc",
#  ]
#} 
config("all_include_config") {
  include_dirs = [
    "./workspace/webrtc",
    "./workspace/",
  ]
}
